--- a/index.html
+++ b/index.html
@@ -36,13 +36,15 @@
     }
 
     .cake {
-      position: relative;
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
       width: 200px;
       height: 150px;
       background: #8b4513;
       border-radius: 10px;
       display: none;
-      margin: auto;
     }
 
     .cake::before {
@@ -89,18 +91,58 @@
       to { transform: translateX(-50%) scale(1.2); }
     }
 
+    /* Heart-shaped balloons */
     .balloon {
       position: absolute;
       bottom: -150px;
       width: 60px;
-      height: 80px;
-      border-radius: 50% 50% 50% 50% / 60% 60% 40% 40%;
+      height: 60px;
+      background: red;
+      transform: rotate(-45deg);
       animation: floatUp 6s linear forwards;
     }
 
+    .balloon::before,
+    .balloon::after {
+      content: "";
+      position: absolute;
+      width: 60px;
+      height: 60px;
+      background: inherit;
+      border-radius: 50%;
+    }
+
+    .balloon::before {
+      top: -30px;
+      left: 0;
+    }
+
+    .balloon::after {
+      left: 30px;
+      top: 0;
+    }
+
+    /* String */
+    .string {
+      position: absolute;
+      bottom: -80px;
+      left: 50%;
+      width: 2px;
+      height: 80px;
+      background: #444;
+      transform: translateX(-50%);
+      animation: sway 2s infinite ease-in-out;
+    }
+
+    @keyframes sway {
+      0% { transform: translateX(-50%) rotate(-2deg); }
+      50% { transform: translateX(-50%) rotate(2deg); }
+      100% { transform: translateX(-50%) rotate(-2deg); }
+    }
+
     @keyframes floatUp {
-      from { transform: translateY(0); opacity: 1; }
-      to { transform: translateY(-120vh); opacity: 0; }
+      from { transform: translateY(0) rotate(-45deg); opacity: 1; }
+      to { transform: translateY(-120vh) rotate(-45deg); opacity: 0; }
     }
   </style>
 </head>
@@ -151,13 +193,18 @@
     });
 
     function spawnBalloons(count) {
-      const colors = ["#a67c52", "#c4a484", "#d2b48c", "#deb887", "#654321"];
+      const colors = ["#ff4d6d", "#ff7f7f", "#e75480", "#ff9999", "#cc3366"];
       for (let i = 0; i < count; i++) {
         let b = document.createElement("div");
         b.className = "balloon";
         b.style.left = Math.random() * 90 + "vw";
         b.style.background = colors[Math.floor(Math.random() * colors.length)];
         b.style.animationDuration = (4 + Math.random() * 2) + "s";
+
+        let s = document.createElement("div");
+        s.className = "string";
+        b.appendChild(s);
+
         document.body.appendChild(b);
         setTimeout(() => b.remove(), 6000);
       }
